<resources>
    <string name="app_name">Hangman</string>
    <string-array name="category">
        <item>MOVIES</item>
        <item>DICTIONARY</item>
        <item>SPORTS</item>
        <item>TV SHOWS</item>
        <item>PERSONALITIES</item>
        <item>POKEMON</item>
        <item>COUNTRIES</item>
        <item>FASHION</item>
        <item>VOCABULARY</item>
        <item>MUSIC</item>
    </string-array>

    <string-array name="descriptions">
        <item>Movies, Actors, Awards and More</item>
        <item>Simple words.</item>
        <item>Sports and Sportsmen</item>
        <item>TV Serials,Cartoons, Actors, Awards etc</item>
        <item>Famous persons</item>
        <item>All about Pokemons</item>
        <item>Countries and Capitals</item>
        <item>Clothes, Shoes, Accessories etc</item>
        <item>Difficult words. Helps in GRE!</item>
        <item>Musicians,Albums,Singers etc</item>
    </string-array>
    <string name="title_activity_gameplay">GameplayActivity</string>

    <string name="button_letter_a">A</string>
    <string name="button_letter_b">B</string>
    <string name="button_letter_c">C</string>
    <string name="button_letter_d">D</string>
    <string name="button_letter_e">E</string>
    <string name="button_letter_f">F</string>
    <string name="button_letter_g">G</string>
    <string name="button_letter_h">H</string>
    <string name="button_letter_i">I</string>
    <string name="button_letter_j">J</string>
    <string name="button_letter_k">K</string>
    <string name="button_letter_l">L</string>
    <string name="button_letter_m">M</string>
    <string name="button_letter_n">N</string>
    <string name="button_letter_o">O</string>
    <string name="button_letter_p">P</string>
    <string name="button_letter_q">Q</string>
    <string name="button_letter_r">R</string>
    <string name="button_letter_s">S</string>
    <string name="button_letter_t">T</string>
    <string name="button_letter_u">U</string>
    <string name="button_letter_v">V</string>
    <string name="button_letter_w">W</string>
    <string name="button_letter_x">X</string>
    <string name="button_letter_y">Y</string>
    <string name="button_letter_z">Z</string>

    <string name="button_go_home">HOME</string>
    <string name="button_next">NEXT ONE</string>

    <string name="win_congrats">Congrats</string>
    <string name="you_won">YOU WON!</string>
    <string name="lose_sorry">Sorry</string>
    <string name="you_lose">YOU LOSE :(</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="instruction_title">INSTRUCTIONS</string>
    <string name="instructions">1.You will be given a word which you have to guess.\n\n2.Words are chosen at random
        and few letters of the word will be filled.\n\n
        3.You have to guess the remaining letters of the word.\n\n
        4.Each time you press a wrong letter one part of the hangman will be formed.\n\n
        5.You will have 8 tries to guess the correct word.\n\n
        6.If you fail to guess in 8 tries the man will be hanged.\n\n
        7.Each time you press a letter that letter in the keypad will be disabled.\n\n
        8.You can always take a hint by clicking  on the "?" button. Clues are free for this version.</string>

    <string name="banner_ad_unit_id">ca-app-pub-3894268392664867/5568853631</string>

</resources>
