<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gameplaybg1"
   >

    <TextView
        android:id="@+id/textLevel"
        android:layout_weight = "0.5"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:text=""
        android:textSize = "20sp"
        android:textColor = "#ffff"
        android:textStyle = "bold"
    />
    <ImageView
        android:id="@+id/imageHanging"
        android:layout_weight = "3"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:src="@drawable/hang0" />

    <TextView
        android:id="@+id/textFill"
        android:layout_weight = "1.2"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:text=""
        android:textSize = "26sp"
        android:textColor = "#FC0000"
        android:textStyle = "bold" />

    <LinearLayout
        android:layout_weight = "0.4"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="10"
        android:textSize = "22sp"
        android:paddingBottom="4dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp">

        <Button
            android:id="@+id/buttonQ"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/letter_up"
            android:onClick="clickLetter"
            android:text="@string/button_letter_q"
            />

        <Button
            android:id="@+id/buttonW"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:onClick="clickLetter"
            android:text="@string/button_letter_w"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonE"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:onClick="clickLetter"
            android:text="@string/button_letter_e"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonR"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:onClick="clickLetter"
            android:text="@string/button_letter_r"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonT"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:onClick="clickLetter"
            android:text="@string/button_letter_t"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonY"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:onClick="clickLetter"
            android:text="@string/button_letter_y"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonU"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:onClick="clickLetter"
            android:text="@string/button_letter_u"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonI"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:onClick="clickLetter"
            android:text="@string/button_letter_i"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonO"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:onClick="clickLetter"
            android:text="@string/button_letter_o"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonP"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:onClick="clickLetter"
            android:text="@string/button_letter_p"
            android:background="@drawable/letter_up"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_weight = "0.4"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="10"
        android:textSize = "22sp"
        android:paddingBottom="4dp"
        android:paddingLeft="0.5dp"
        android:paddingTop="0.5dp"
        android:paddingRight="0.5dp">

        <Button
            android:id="@+id/buttonA"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_a"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonS"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/letter_up"
            android:onClick="clickLetter"
            android:text="@string/button_letter_s" />

        <Button
            android:id="@+id/buttonD"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_d"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonF"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_f"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonG"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_g"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonH"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_h"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonJ"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_j"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonK"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_k"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonL"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_l"
            android:background="@drawable/letter_up"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_weight = "0.4"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="0.5dp"
        android:weightSum="10"
        android:textSize = "22sp" >

        <Button
            android:id="@+id/buttonZ"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_z"
            android:background="@drawable/letter_up"
            />
        <Button
            android:id="@+id/buttonX"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_x"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonC"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_c"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonV"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_v"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonB"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_b"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonN"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_n"
            android:background="@drawable/letter_up"
            />

        <Button
            android:id="@+id/buttonM"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_m"
            android:background="@drawable/letter_up"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_weight = "0.5"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="7"
        android:padding="2dp"
        android:textSize = "14sp" >

        <Button
            android:id="@+id/buttonHome"
            android:layout_weight="0"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:onClick="goHome"
            android:text="@string/button_go_home"
            android:background="@drawable/letter_up"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="30dp" />
        <Button
            android:id="@+id/nextOne"
            android:layout_weight="0"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:onClick="nextOne"
            android:text="@string/button_next"
            android:background="@drawable/letter_up"
            android:layout_marginLeft="30dp" />
        <TextView
            android:layout_weight = "1.5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="" />
        <!--Button
            android:id="@+id/buttonNext"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:onClick="nextOne"
            android:text="@string/button_next"
            android:background= "@drawable/buttonnextonestyle"
            android:textColor = "@drawable/nextonecolor"
            /-->
    </LinearLayout>
</LinearLayout>